--- a/listpage.html
+++ b/listpage.html
@@ -8,24 +8,74 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/listpage.css">
+    <script src="https://kit.fontawesome.com/888ccafea8.js"></script>
     <title>Listings Page</title>
 </head>
 
 <body>
     <div class="container-fluid">
         <!-- NAVIGATION BAR -->
-        <div class="row nav">
-            <div class="col nav-bar">
 
+        <nav class="flex-direction-row">
+            <div class="nav-content-wrap flex-direction-row">
+                <div class="logo-and-search-wrap">
+                    <div class="logo-on-nav-wrap">
+                        <img class="logo-on-nav"
+                            src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Flogo.png?v=1566156485018"
+                            alt="">
+                    </div>
+
+                    <div class="search-bar-wrap">
+                        <div class="search-bar">
+                            <input onblur="Interact.searchBlur()" onfocus="Interact.searchFocus()" class="search-input"
+                                type="text" placeholder="Search Fresno Fresh">
+                            <i class="fa fa-search"></i>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="user-options">
+                    <div onclick="Interact.dropDown()" class="individual-option-wrap drop-down-wrap">
+                        <div class="icon-wrap">
+                            <i class="fa fa-bars" aria-hidden="true"></i>
+                        </div>
+                    </div>
+
+                    <div class="individual-option-wrap">
+                        <div class="icon-wrap">
+                            <i class="fa fa-home"></i>
+                        </div>
+                    </div>
+
+                    <div class="individual-option-wrap">
+                        <div class="icon-wrap">
+                            <i class="fa fa-envelope-o"></i>
+                        </div>
+                    </div>
+
+                    <div class="individual-option-wrap">
+                        <div class="icon-wrap">
+                            <i class="fa fa-user"></i>
+                        </div>
+                    </div>
+
+                    <div class="individual-option-wrap create-post-option">
+                        <div onclick="Post.post()" class="icon-wrap">
+                            <i class="fa fa-pencil"></i>
+                        </div>
+                    </div>
+                </div>
             </div>
-        </div>
+        </nav>
 
         <!-- PROFILE SIDE -->
+
         <div class="sidebar">
 
         </div>
         <!-- FIRST ROW OF CONTENT -->
         <div class="content">
+
 
 
             <div class="card-deck">
@@ -92,12 +142,21 @@
                 </div>
             </div>
         </div>
+
+
+        <footer>
+            <div class="social-media">
+                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-3x"></i>
+                    <span class="hidden-xs"></span></a>
+
+                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-3x"></i>
+                    <span class="hidden-xs"></span></a>
+
+                <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-3x"></i>
+                    <span class="hidden-xs"></span></a>
+            </div>
+        </footer>
     </div>
-
-
-    <footer>
-
-    </footer>
 
 </body>
 
