--- a/listpage.html
+++ b/listpage.html
@@ -145,7 +145,7 @@
             </div>
         </div>
 
-
+        <!-- FOOTER -->
         <footer>
             <div class="social-media">
                 <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-3x"></i>
@@ -160,6 +160,7 @@
         </footer>
     </div>
 
+<script src="listpage.js"></script>
 </body>
 
 </html>
