Added Home Page + Fixed Account Page

--- a/account.html
+++ b/account.html
@@ -6,7 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>Account Page</title>
-    <link rel="stylesheet" href="my-account-style.css">
+    <link rel="stylesheet" href="account_style.css">
     <link rel="stylesheet" href="pop-up.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
@@ -19,9 +19,11 @@
         <div class="nav-content-wrap flex-direction-row">
             <div class="logo-and-search-wrap">
                 <div class="logo-on-nav-wrap">
+                  <a href="index.html">
                     <img class="logo-on-nav"
                         src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Flogo.png?v=1566156485018"
                         alt="">
+                    </a>
                 </div>
 
                 <div class="search-bar-wrap">
@@ -122,10 +124,14 @@
         </div>
     </section>
 
-    <script type="text/javascript" src="my-account-script.js"></script>
+    <script type="text/javascript" src="account_script.js"></script>
     <script src="https://use.fontawesome.com/4f5af56c88.js"></script>
     <script src="pop-up.js"></script>
 
 </body>
 
 </html>
+<!-- Color Scheme
+    #286e8c
+#35809e
+-->
