--- a/index.html
+++ b/index.html
@@ -5,12 +5,248 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <title>Document</title>
+    <title>Fresno Fresh</title>
+    <link rel="stylesheet" href="homepage.css">
+    <script src="https://use.fontawesome.com/4f5af56c88.js"></script>
+    <link href="https://fonts.googleapis.com/css?family=Aleo:300&display=swap" rel="stylesheet">
 </head>
 
-<body>
-    <a href="account.html">Account Page Here</a>
+<body onload="Init.start()">
 
+    <!-- #####@@@@@@##### NAVIGATION BAR #####@@@@@@##### -->
+    <nav class="flex-direction-row">
+        <div class="nav-content-wrap flex-direction-row">
+            <div class="logo-and-search-wrap">
+                <div class="logo-on-nav-wrap">
+                    <img class="logo-on-nav"
+                        src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Flogo.png?v=1566156485018"
+                        alt="">
+                </div>
+
+                <div class="search-bar-wrap">
+                    <div class="search-bar">
+                        <input onblur="Interact.searchBlur()" onfocus="Interact.searchFocus()" class="search-input"
+                            type="text" placeholder="Search Fresno Fresh">
+                        <i class="fa fa-search"></i>
+                    </div>
+                </div>
+            </div>
+
+            <div class="user-options">
+                <div onclick="Interact.dropDown()" class="individual-option-wrap drop-down-wrap">
+                    <div class="icon-wrap">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </div>
+                </div>
+
+                <div class="individual-option-wrap">
+                    <a href="listpage.html">
+                        <div class="icon-wrap">
+                            <i class="fa fa-home"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <div onclick="PopUp.show()" class="individual-option-wrap">
+                    <div class="icon-wrap">
+                        <i class="fa fa-envelope-o"></i>
+                    </div>
+                </div>
+
+                <div class="individual-option-wrap">
+                    <a href="account.html">
+                        <div class="icon-wrap">
+                            <i class="fa fa-user"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="individual-option-wrap create-post-option">
+                    <div onclick="Post.post()" class="icon-wrap">
+                        <i class="fa fa-pencil"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+    <div class="header-section">
+        <div class="logo-text">Fresno <span>Fresh</span></div>
+        <div class="slogan-text">Food that delivers.</div>
+
+
+        <div class="header-options-wrap">
+            <div class="purpose-header">
+                <p>
+                    Fresno Fresh focuses on reducing food waste within Fresno County
+                    by allowing agricultural companies to share food that not meet
+                    cosmetic standards of the local market
+                </p>
+            </div>
+            <div class="header-button-wrap">
+                <button>Learn More</button>
+            </div>
+            <div class="header-button-wrap">
+                <button>Get Started</button>
+            </div>
+        </div>
+    </div>
+
+    <section class="reviews">
+        <div class="hashtag-wrap">
+            <h1 class="hashtag">#iEatFresnoFreshFood</h1>
+        </div>
+        <div class="reviews-wrap">
+
+            <div class="individual-review">
+                <div class="profile-image-col">
+                    <img alt="Profile Image"
+                        src="https://images.unsplash.com/photo-1509460913899-515f1df34fea?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=668&q=80">
+                </div>
+                <div class="review-content-col">
+                    <div class="name-wrap">
+                        <p>
+                            Alonso Trapera
+                        </p>
+                        <span>
+                            @alonsotrapera
+                        </span>
+                    </div>
+                    <div class="review-tweet-wrap">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur, adipisicing elit.
+                            Maxime cumque <span>@FresnoFresh</span> facilis hic sed? Quae.
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="individual-review">
+                <div class="profile-image-col">
+                    <img class="review-image-2" alt="Profile Image"
+                         src="https://images.unsplash.com/photo-1476493279419-b785d41e38d8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">
+                </div>
+                <div class="review-content-col">
+                    <div class="name-wrap">
+                        <p>
+                            Riley Datrine
+                        </p>
+                        <span>
+                            @rubyonriles
+                        </span>
+                    </div>
+                    <div class="review-tweet-wrap">
+                        <p>
+                            Lorem ipsum dolor sit <span>@FresnoFresh</span> amet consectetur adipisicing elit.
+                            <span>#savetheturtles</span>
+                        </p>
+                    </div>
+                </div>
+            </div>
+
+            <div class="individual-review">
+                <div class="profile-image-col">
+                    <img alt="Profile Image"
+                        src="https://images.unsplash.com/photo-1541647376583-8934aaf3448a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=600&q=60">
+                </div>
+                <div class="review-content-col">
+                    <div class="name-wrap">
+                        <p>
+                            Derek Krawshuk
+                        </p>
+                        <span>
+                            @therealwaldo
+                        </span>
+                    </div>
+                    <div class="review-tweet-wrap">
+                        <p>
+                            Lorem ipsum dolor sit amet consectetur adipisicing elit. Consectetur, exercitationem eaque
+                            <span>@FresnoFresh</span> int quasi amet sed adipisci voluptas beatae ab, porro, aspernatur
+                            non!
+                        </p>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <section class="info-wrap">
+        <div class="info-type-wrap">
+            <div class="info-img-wrap">
+                <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Ffarmer.png?v=1567302889272" alt="">
+            </div>
+
+            <div class="info-header-wrap">
+                <h6>Farmers post fresh food</h6>
+            </div>
+
+            <div class="info-content-wrap">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Optio saepe mollitia delectus? Lorem, ipsum dolor sit amet
+                    consectetur adipisicing elit. Doloribus, voluptatibus! Et iusto quaerat culpa.
+                </p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Optio saepe mollitia delectus?
+                </p>
+            </div>
+        </div>
+
+        <div class="info-type-wrap">
+            <div class="info-img-wrap">
+                <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Fconsumer.png?v=1567302891099" alt="">
+            </div>
+
+            <div class="info-header-wrap">
+                <h6>Consumers post needed food</h6>
+            </div>
+
+            <div class="info-content-wrap">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Optio saepe mollitia delectus? Lorem, ipsum dolor sit amet
+                    consectetur adipisicing elit. Doloribus, voluptatibus! Et iusto quaerat culpa.
+                </p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Optio saepe mollitia delectus?
+                </p>
+            </div>
+        </div>
+
+        <div class="info-type-wrap">
+            <div class="info-img-wrap">
+                <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Frecieve.png?v=1567302887148" alt="">
+            </div>
+
+            <div class="info-header-wrap">
+                <h6>Whole community exchanges wholeheartedly</h6>
+            </div>
+
+            <div class="info-content-wrap">
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Optio saepe mollitia delectus? Lorem, ipsum dolor sit amet
+                    consectetur adipisicing elit. Doloribus, voluptatibus! Et iusto quaerat culpa.
+                </p>
+                <p>
+                    Lorem, ipsum dolor sit amet consectetur adipisicing elit.
+                    Optio saepe mollitia delectus?
+                </p>
+            </div>
+        </div>
+
+        <div class="info-button-wrap">
+            <button>Get Started</button>
+        </div>
+    </section>
+
+    <footer>
+        <p>@2019 Made with <i class="fa fa-heart"></i></p>
+    </footer>
+
+    <script type="text/javascript" src="homepage.js"></script>
 </body>
 
 </html>
