--- a/listpage.html
+++ b/listpage.html
@@ -8,69 +8,73 @@
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel="stylesheet" href="css/listpage.css">
-    <script src="https://kit.fontawesome.com/888ccafea8.js"></script>
+    <link rel="stylesheet" href="css/pop-up.css">
+    <script src="https://use.fontawesome.com/4f5af56c88.js"></script>
     <title>Listings Page</title>
 </head>
 
-<body>
-    <div class="container-fluid">
-        <!-- NAVIGATION BAR -->
+<body onload="Init.start()">
 
-        <!-- #####@@@@@@##### NAVIGATION BAR #####@@@@@@##### -->
-        <nav class="flex-direction-row">
-            <div class="nav-content-wrap flex-direction-row">
-                <div class="logo-and-search-wrap">
-                    <div class="logo-on-nav-wrap">
+    <!-- #####@@@@@@##### NAVIGATION BAR #####@@@@@@##### -->
+    <nav class="flex-direction-row">
+        <div class="nav-content-wrap flex-direction-row">
+            <div class="logo-and-search-wrap">
+                <div class="logo-on-nav-wrap">
+                    <a href="index.html">
                         <img class="logo-on-nav"
                             src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Flogo.png?v=1566156485018"
                             alt="">
-                    </div>
-
-                    <div class="search-bar-wrap">
-                        <div class="search-bar">
-                            <input onblur="Interact.searchBlur()" onfocus="Interact.searchFocus()" class="search-input"
-                                type="text" placeholder="Search Fresno Fresh">
-                            <i class="fa fa-search"></i>
-                        </div>
-                    </div>
+                    </a>
                 </div>
 
-                <div class="user-options">
-                    <div onclick="Interact.dropDown()" class="individual-option-wrap drop-down-wrap">
-                        <div class="icon-wrap">
-                            <i class="fa fa-bars" aria-hidden="true"></i>
-                        </div>
-                    </div>
-
-                    <div class="individual-option-wrap">
-                        <div class="icon-wrap">
-                            <i class="fa fa-home"></i>
-                        </div>
-                    </div>
-
-                    <div onclick="PopUp.show()" class="individual-option-wrap">
-                        <div class="icon-wrap">
-                            <i class="fa fa-envelope-o"></i>
-                        </div>
-                    </div>
-
-                    <div class="individual-option-wrap">
-                        <a href="my-account.html">
-                            <div class="icon-wrap">
-                                <i class="fa fa-user"></i>
-                            </div>
-                        </a>
-                    </div>
-
-                    <div class="individual-option-wrap create-post-option">
-                        <div onclick="PopUp.show()" class="icon-wrap">
-                            <i class="fa fa-pencil"></i>
-                        </div>
+                <div class="search-bar-wrap">
+                    <div class="search-bar">
+                        <input onblur="Interact.searchBlur()" onfocus="Interact.searchFocus()" class="search-input"
+                            type="text" placeholder="Search Fresno Fresh">
+                        <i class="fa fa-search"></i>
                     </div>
                 </div>
             </div>
-        </nav>
 
+            <div class="user-options">
+                <div onclick="Interact.dropDown()" class="individual-option-wrap drop-down-wrap">
+                    <div class="icon-wrap">
+                        <i class="fa fa-bars" aria-hidden="true"></i>
+                    </div>
+                </div>
+
+                <div class="individual-option-wrap">
+                    <div class="icon-wrap">
+                        <i class="fa fa-home"></i>
+                    </div>
+                </div>
+
+                <div onclick="PopUp.show()" class="individual-option-wrap">
+                    <div class="icon-wrap">
+                        <i class="fa fa-envelope-o"></i>
+                    </div>
+                </div>
+
+                <div class="individual-option-wrap">
+                    <a href="my-account.html">
+                        <div class="icon-wrap">
+                            <i class="fa fa-user"></i>
+                        </div>
+                    </a>
+                </div>
+
+                <div class="individual-option-wrap create-post-option">
+                    <div onclick="PopUp.show()" class="icon-wrap">
+                        <i class="fa fa-pencil"></i>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </nav>
+
+
+
+    <div class="container-fluid">
 
         <!-- PROFILE SIDE -->
 
@@ -79,10 +83,10 @@
         </div>
         <!-- FIRST ROW OF CONTENT -->
         <div class="content">
-
             <div class="card-deck">
                 <div class="card">
-                    <img src="images/carrots.jpg" class="card-img-top" alt="...">
+                    <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Ftomato.jpg?v=1566437993472"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -91,7 +95,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/rasberries.jpg" class="card-img-top" alt="...">
+                    <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Frasberries.jpg?v=1566437999589"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -100,7 +105,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/tomato.jpg" class="card-img-top" alt="...">
+                    <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Fcarrots.jpg?v=1566438005960"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -115,7 +121,8 @@
             <!-- SECOND ROW OF CONTENT -->
             <div class="card-deck">
                 <div class="card">
-                    <img src="images/rasberries.jpg" class="card-img-top" alt="...">
+                    <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Frasberries.jpg?v=1566437999589"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a longer card with supporting text below as a natural lead-in to
@@ -124,7 +131,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/tomato.jpg" class="card-img-top" alt="...">
+                    <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Fcarrots.jpg?v=1566438005960"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This card has supporting text below as a natural lead-in to additional
@@ -133,7 +141,8 @@
                     </div>
                 </div>
                 <div class="card">
-                    <img src="images/carrots.jpg" class="card-img-top" alt="...">
+                    <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Fcarrots.jpg?v=1566438005960"
+                        class="card-img-top" alt="...">
                     <div class="card-body">
                         <h5 class="card-title">Card title</h5>
                         <p class="card-text">This is a wider card with supporting text below as a natural lead-in to
@@ -145,22 +154,24 @@
             </div>
         </div>
 
-        <!-- FOOTER -->
+
         <footer>
             <div class="social-media">
-                <a href="https://www.facebook.com" target="_blank"><i class="fab fa-facebook-square fa-3x"></i>
+                <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square fa-3x"></i>
                     <span class="hidden-xs"></span></a>
 
-                <a href="https://www.twitter.com" target="_blank"><i class="fab fa-twitter fa-3x"></i>
+                <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-3x"></i>
                     <span class="hidden-xs"></span></a>
 
-                <a href="https://www.linkedin.com" target="_blank"><i class="fab fa-linkedin fa-3x"></i>
+                <a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-3x"></i>
                     <span class="hidden-xs"></span></a>
             </div>
         </footer>
     </div>
 
-<script src="listpage.js"></script>
+    <script src="listpage.js"></script>
+    <script src="pop-up.js"></script>
+
 </body>
 
 </html>
