added js for checking on a click from multiple events

--- a/listpage.html
+++ b/listpage.html
@@ -82,7 +82,7 @@
 
         </div>
         <!-- FIRST ROW OF CONTENT -->
-        <div class="content">
+        <div class="content" id="theDude">
             <div class="card-deck">
                 <div class="card">
                     <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Ftomato.jpg?v=1566437993472"
