--- a/account.html
+++ b/account.html
@@ -10,6 +10,7 @@
     <link rel="stylesheet" href="pop-up.css">
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css"
         integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
+    <link href="https://fonts.googleapis.com/css?family=Aleo:300&display=swap" rel="stylesheet">
 </head>
 
 <body onload="Init.start()">
@@ -123,6 +124,20 @@
             <!-- This is where the posts go -->
         </div>
     </section>
+
+    <!-- #####@@@@@@##### FOOTER SECTION #####@@@@@@##### -->
+    <footer>
+        <div class="social-media">
+            <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square fa-3x"></i>
+                <span class="hidden-xs"></span></a>
+
+            <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-3x"></i>
+                <span class="hidden-xs"></span></a>
+
+            <a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-3x"></i>
+                <span class="hidden-xs"></span></a>
+        </div>
+    </footer>
 
     <footer>
         <p>@2019 Made with <i class="fa fa-heart"></i></p>
