--- a/index.html
+++ b/index.html
@@ -54,7 +54,7 @@
                 </div>
 
                 <div class="individual-option-wrap">
-                    <a href="account.html">
+                    <a href="my-account.html">
                         <div class="icon-wrap">
                             <i class="fa fa-user"></i>
                         </div>
@@ -70,6 +70,7 @@
         </div>
     </nav>
 
+    <!-- #####@@@@@@##### HEADER SECTION #####@@@@@@##### -->
     <div class="header-section">
         <div class="logo-text">Fresno <span>Fresh</span></div>
         <div class="slogan-text">Food that delivers.</div>
@@ -92,6 +93,8 @@
         </div>
     </div>
 
+
+    <!-- #####@@@@@@##### TESTIMONY SECTION #####@@@@@@##### -->
     <section class="reviews">
         <div class="hashtag-wrap">
             <h1 class="hashtag">#iEatFresnoFreshFood</h1>
@@ -124,7 +127,7 @@
             <div class="individual-review">
                 <div class="profile-image-col">
                     <img class="review-image-2" alt="Profile Image"
-                         src="https://images.unsplash.com/photo-1476493279419-b785d41e38d8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">
+                        src="https://images.unsplash.com/photo-1476493279419-b785d41e38d8?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=800&q=60">
                 </div>
                 <div class="review-content-col">
                     <div class="name-wrap">
@@ -173,7 +176,8 @@
     <section class="info-wrap">
         <div class="info-type-wrap">
             <div class="info-img-wrap">
-                <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Ffarmer.png?v=1567302889272" alt="">
+                <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Ffarmer.png?v=1567302889272"
+                    alt="">
             </div>
 
             <div class="info-header-wrap">
@@ -193,9 +197,11 @@
             </div>
         </div>
 
+        <!-- #####@@@@@@##### INFORMATION SECTION #####@@@@@@##### -->
         <div class="info-type-wrap">
             <div class="info-img-wrap">
-                <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Fconsumer.png?v=1567302891099" alt="">
+                <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Fconsumer.png?v=1567302891099"
+                    alt="">
             </div>
 
             <div class="info-header-wrap">
@@ -217,7 +223,8 @@
 
         <div class="info-type-wrap">
             <div class="info-img-wrap">
-                <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Frecieve.png?v=1567302887148" alt="">
+                <img src="https://cdn.glitch.com/ede46f42-b5b9-48ad-8d72-f38482566cde%2Frecieve.png?v=1567302887148"
+                    alt="">
             </div>
 
             <div class="info-header-wrap">
@@ -241,6 +248,20 @@
             <button>Get Started</button>
         </div>
     </section>
+
+    <!-- #####@@@@@@##### FOOTER SECTION #####@@@@@@##### -->
+    <footer>
+        <div class="social-media">
+            <a href="https://www.facebook.com" target="_blank"><i class="fa fa-facebook-square fa-3x"></i>
+                <span class="hidden-xs"></span></a>
+
+            <a href="https://www.twitter.com" target="_blank"><i class="fa fa-twitter fa-3x"></i>
+                <span class="hidden-xs"></span></a>
+
+            <a href="https://www.linkedin.com" target="_blank"><i class="fa fa-linkedin fa-3x"></i>
+                <span class="hidden-xs"></span></a>
+        </div>
+    </footer>
 
     <footer>
         <p>@2019 Made with <i class="fa fa-heart"></i></p>
